<resources>
    <string name="app_name">HouseKeeper</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="id_name">邮箱/手机号码</string>
    <string name="pwd_name">密码</string>
    <string name="new_user_name">新用户注册</string>
    <string name="foreget_pwd_name">忘记密码</string>
    <string name="login_name">登录</string>
    <string name="title_activity_register_phone">RegisterPhoneActivity</string>
    <string name="register_email">邮箱注册&#160;&#062;&#062;</string>
    <string name="code">获取验证码</string>
    <string name="phone_num">手机号</string>
    <string name="comfire_pwd">确认密码</string>
    <string name="edit_code">请输入验证码</string>
    <string name="old_user_login1">老用户登录 &#160;&#062;&#062;</string>
    <string name="register_phone">&#060;&#060;&#160;手机号注册</string>
    <string name="email">邮箱</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="about_s">关于 </string>
    <string name="accept">接听</string>
    <string name="account">账号</string>
    <string name="account_already_exists_in_mask_list">账号在屏蔽列表中已存在</string>
    <string name="account_info">账户信息</string>
    <string name="account_no_exist">账户不存在</string>
    <string name="add_contact">添加至设备列表</string>
    <string name="add_contacts">添加设备</string>
    <string name="add_success">添加成功</string>
    <string name="alarm_control">报警设置</string>
    <string name="alarm_email">报警推送邮箱</string>
    <string name="alarm_id_must_first_with_zero">报警推送账号是指你的APP账号</string>
    <string name="alarm_id_too_long">报警ID不能超过9个字符</string>
    <string name="alarm_info">报警信息</string>
    <string name="alarm_manager">报警管理</string>
    <string name="alarm_mask">报警屏蔽设备</string>
    <string name="alarm_mask_id_too_long">设备ID不能超过9个字符</string>
    <string name="alarm_record">报警记录</string>
    <string name="alarm_time_interval">报警间隔(秒)</string>
    <string name="all_tel">设备列表</string>
    <string name="allarm_ring">报警铃声</string>
    <string name="allarm_robot">设备：</string>
    <string name="allarm_type">类型：</string>
    <string name="allarm_type1">外部报警</string>
    <string name="allarm_type2">移动侦测</string>
    <string name="allarm_type3">紧急报警</string>
    <string name="Allarm_vibrate">报警振动</string>
    <string name="already_init_passwd">密码已经存在</string>
    <string name="are_you_sure_delete">确定删除</string>
    <string name="area">防区</string>
    <string name="audio_video_control">媒体设置</string>
    <string name="auto_start">自动启动</string>
    <string name="balcony">阳台</string>
    <string name="basic_Info">基本信息</string>
    <string name="bedroom">卧室</string>
    <string name="bell_ring">来电铃声</string>
    <string name="bell_set">铃声设置</string>
    <string name="binding">报警推送账号</string>
    <string name="busy">对方忙线</string>
    <string name="buzzer">蜂鸣器</string>
    <string name="buzzer_time">蜂鸣时长(分钟)</string>
    <string name="calling_to">正在呼叫</string>
    <string name="can_update_in_sd">能够从SD卡升级</string>
    <string name="can_update_to">可更新至</string>
    <string name="cancel">取消</string>
    <string name="cancel_shield">取消屏蔽</string>
    <string name="capture">截图</string>
    <string name="capture_failed">截图失败</string>
    <string name="capture_success">截图成功</string>
    <string name="change">更改</string>
    <string name="change_email">更改邮箱</string>
    <string name="change_phone">绑定手机号码</string>
    <string name="change_wifi">更改Wi-Fi</string>
    <string name="channel">通道</string>
    <string name="chat">通话</string>
    <string name="check">查看</string>
    <string name="check_device_update">检查设备更新</string>
    <string name="check_update">检查更新</string>
    <string name="check_version">检查更新</string>
    <string name="china">中国</string>
    <string name="clear">清空</string>
    <string name="clear_code">清除</string>
    <string name="clear_code_prompt">你确定清除?</string>
    <string name="clear_confirm">确定清空最近通话记录?</string>
    <string name="clear_success">清除成功</string>
    <string name="clearing">清除中...</string>
    <string name="click_refresh">轻触屏幕刷新</string>
    <string name="comming_vibrate">来电振动</string>
    <string name="confirm">确定</string>
    <string name="confirm_clear">您确定清空?</string>
    <string name="confirm_clear_chat">您确定清空?</string>
    <string name="confirm_delete">确定删除吗？</string>
    <string name="confirm_exit">确定退出吗？</string>
    <string name="conn_fail">连接失败</string>
    <string name="connecting_to">正在连接</string>
    <string name="contact_already_exist">设备已存在</string>
    <string name="contact_name">设备昵称</string>
    <string name="contact_pwd">设备密码</string>
    <string name="control">设置</string>
    <string name="courtyard">庭院</string>
    <string name="create_pwd">请输入设备密码</string>
    <string name="create_pwd_prompt">请创建一个6~30位包含字母、数字的设备密码</string>
    <string name="current_version">当前版本</string>
    <string name="current_version_is">当前版本是</string>
    <string name="customize">自定义</string>
    <string name="day">日</string>
    <string name="defence">布防</string>
    <string name="defence_area_control">防区设置</string>
    <string name="delete">删除</string>
    <string name="delete_account">删除账号</string>
    <string name="delete_alarm_id">删除报警账号</string>
    <string name="delete_alarm_records">删除报警记录</string>
    <string name="delete_contact">删除设备</string>
    <string name="delete_sys_messages">删除系统消息</string>
    <string name="device">添加至设备列表</string>
    <string name="device_info">设备信息</string>
    <string name="device_is_latest_version">当前设备为最新版本</string>
    <string name="device_time">设备时间</string>
    <string name="device_unsupport_defence_area">当前设备不支持防区</string>
    <string name="differentpassword">两次输入的密码不一致</string>
    <string name="door_lock">门锁</string>
    <string name="down_complete_click">下载完成，点击更新。</string>
    <string name="down_device_update">正在下载</string>
    <string name="down_fault">下载失败</string>
    <string name="down_fault_click">下载失败，点击移除。</string>
    <string name="down_londing_click">正在下载，点击取消。</string>
    <string name="download">下载中...</string>
    <string name="edit">编辑</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="email_login">邮箱/ID登录</string>
    <string name="email_register">用邮箱注册</string>
    <string name="email_too_long">邮箱长度必须是3-32个字符</string>
    <string name="email_used">邮箱已被注册</string>
    <string name="end_time">结束时间</string>
    <string name="ensure">确定</string>
    <string name="ensure_cancel_shield">确定取消屏蔽</string>
    <string name="ensure_delete">确定删除</string>
    <string name="exit">退出</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="format_error">格式错误</string>
    <string name="friend">添加至设备列表</string>
    <string name="gallery">手机相册</string>
    <string name="get_phone_code_too_times">获取手机验证码，请稍后再尝试</string>
    <string name="hall">大厅</string>
    <string name="has_been_learning">已被学习</string>
    <string name="hour">时</string>
    <string name="hungup">挂断</string>
    <string name="id_disabled">对方的id被禁用</string>
    <string name="id_inactived">对方的id未激活</string>
    <string name="id_overdate">对方的id已过期</string>
    <string name="ignore">忽略</string>
    <string name="ignore_alarm_prompt_start"></string>
    <string name="ignore_alarm_prompt_end">秒内不接收报警信息</string>
    <string name="image_size_too_small">图片尺寸太小</string>
    <string name="input_alarm_mask_id">请输入报警设备账号</string>
    <string name="input_alarmId">请输入报警推送账号</string>
    <string name="input_contact_id">请输入设备ID</string>
    <string name="input_contact_name">请输入设备昵称</string>
    <string name="input_contact_pwd">请输入设备密码</string>
    <string name="input_device_id">请输入设备ID</string>
    <string name="input_device_name">请输入设备名称</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_friend_id">请输入设备ID</string>
    <string name="input_friend_name">请输入设备名称</string>
    <string name="input_login_pwd">请输入登录密码</string>
    <string name="input_monitor_pwd">请输入监控密码</string>
    <string name="input_new_device_pwd">请输入新的管理密码</string>
    <string name="input_new_pwd">请输入新的密码</string>
    <string name="input_old_device_pwd">请输入旧的管理密码</string>
    <string name="input_old_pwd">请输入旧的密码</string>
    <string name="input_phone">请输入您的手机号码</string>
    <string name="input_phone_number">请输入您的手机号码</string>
    <string name="input_re_new_device_pwd">请再输入一次密码</string>
    <string name="input_tip">账户和密码不能为空</string>
    <string name="input_vf_code">请输入手机验证码</string>
    <string name="input_wifi_pwd">请输入Wi-Fi密码</string>
    <string name="inputpassword">请输入密码</string>
    <string name="internal_error">内部错误</string>
    <string name="ir_control">红外遥控</string>
    <string name="kernelVersion">内核版本</string>
    <string name="kitchen">厨房</string>
    <string name="learing_code">学习对码</string>
    <string name="learing_code_prompt">点击确定，触发将要学习的无线设备</string>
    <string name="learning_success">学习成功</string>
    <string name="list_wifi">无线网络列表</string>
    <string name="loading">加载中...</string>
    <string name="login">登录</string>
    <string name="login_ing">正在登录</string>
    <string name="login_title">登录</string>
    <string name="loginfail">登录失败</string>
    <string name="logout">注销</string>
    <string name="me">我</string>
    <string name="message">短信</string>
    <string name="message_net_connect">连接到网络：</string>
    <string name="minutes">分</string>
    <string name="modify_alarmId">修改报警推送账号</string>
    <string name="modify_contacts">修改设备</string>
    <string name="modify_device_password">修改管理密码</string>
    <string name="modify_email">修改邮箱</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="modify_login_pwd">修改登录密码</string>
    <string name="modify_net_warning">修改网络可能造成设备断开连接，请确认操作！</string>
    <string name="modify_phone">绑定手机号码</string>
    <string name="modify_pwd_success">密码修改成功，请重新登录</string>
    <string name="modify_success">修改成功</string>
    <string name="month">月</string>
    <string name="month_format">-</string>
    <string name="motion_detection">移动侦测</string>
    <string name="my_email">我的邮箱</string>
    <string name="my_phone">我的手机</string>
    <string name="net_error">网络异常</string>
    <string name="net_error_operator_fault">网络异常，操作失败</string>
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置</string>
    <string name="net_type">网络类型</string>
    <string name="net_wifi">Wi-Fi</string>
    <string name="net_wired">有线</string>
    <string name="network_control">网络设置</string>
    <string name="network_error">网络异常</string>
    <string name="discover">发现</string>
    <string name="new_device">个新设备</string>
    <string name="new_pwd_too_long">新密码长度不能超过10个字符</string>
    <string name="next">下一步</string>
    <string name="next_time">下次再说</string>
    <string name="no_next_file">无下一个文件</string>
    <string name="no_previous_file">无上一个文件</string>
    <string name="no_wifi_list">无Wi-Fi列表</string>
    <string name="nohelper">连接失败</string>
    <string name="none">未知原因</string>
    <string name="not_support">不支持</string>
    <string name="notification_bar_icon">通知栏挂机图标</string>
    <string name="offline">对方离线</string>
    <string name="old_pwd_error">旧密码错误</string>
    <string name="old_pwd_too_long">原密码长度不能超过10个字符</string>
    <string name="one_day">最近一天</string>
    <string name="one_month">最近一月</string>
    <string name="online_state">在线</string>
    <string name="operator">操作</string>
    <string name="operator_error">操作失败</string>
    <string name="other">其它</string>
    <string name="other_was_checking">网络繁忙，请稍后再试</string>
    <string name="p2p_call_push_mesg">呼叫中</string>
    <string name="password">密码</string>
    <string name="password_error">密码错误</string>
    <string name="password_length_error">密码太长</string>
    <string name="phone_format_error">手机号码格式错误</string>
    <string name="phone_login">手机号码登录</string>
    <string name="phone_number_used">手机号码已经注册了</string>
    <string name="sd_capacity">SD卡容量：</string>
    <string name="sd_remainning_capacity">SD卡剩余容量：</string>
    <string name="sd_formatting">格式化SD卡</string>
    <string name="imagedes" />
</resources>