<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/denglu_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/denglu_beijing"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/user_id_rela"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/edit_view"
            >
            <EditText
                android:id="@+id/user_id"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:background="@null"
                android:layout_centerInParent="true"
                android:hint="@string/id_name" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/user_pwd_rela"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_view"
            android:layout_below="@id/user_id_rela"
            android:layout_marginTop="10dp"
            >
            <EditText
                android:id="@+id/user_pwd"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:password="true"
                android:background="@null"
                android:layout_centerInParent="true"
                android:hint="@string/pwd_name"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/user_pwd_rela"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button_selector"
            android:textColor="#ffffff"
            android:text="@string/login_name" />

        <RelativeLayout
            android:id="@+id/new_relative"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn_login"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user_name"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_toRightOf="@id/tv_new_user"
                android:textColor="#000000"
                android:text="@string/foreget_pwd_name" />
        </RelativeLayout>
    </RelativeLayout>
    <include layout="@layout/progress_bar"/>
</RelativeLayout>
