<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="300dp"
	android:layout_height="280dp"
    android:orientation="vertical"
    android:layout_gravity="center"
	android:background="#00000000"
    >

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="120dp"
		android:background="@drawable/modify_dialog"
		>
		<TextView
			android:id="@+id/title_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:textSize="@dimen/text_size_normal"
			android:textColor="@color/dialog_title_color"
			android:text="@string/delete_account"
			android:textStyle="bold"
			/>
		<ImageView
			android:id="@+id/separator"
			android:layout_below="@id/title_text"
			android:layout_width="match_parent"
			android:src="@mipmap/list_item_line"
			android:layout_height="wrap_content"
			android:scaleType="center"
			/>
		<RelativeLayout
			android:id="@+id/dialog_content"
			android:layout_width="match_parent"
			android:layout_height="@dimen/dialog_content_height"
			android:layout_below="@id/separator"
			>
			<TextView
				android:id="@+id/content_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_centerInParent="true"
				android:layout_marginLeft="@dimen/inner_margin_left"
				android:textSize="@dimen/text_size_normal"
				android:textColor="@color/black"
				android:text="从列表中删除11126？"
				/>
		</RelativeLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:layout_below="@id/dialog_content"
			android:orientation="horizontal"
			android:layout_margin="2dp"
			android:gravity="center_vertical"
			>
			<RelativeLayout
				android:layout_width="1dp"
				android:layout_weight="1"
				android:layout_height="match_parent"
				>
				<TextView
					android:id="@+id/button1_text"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:textSize="@dimen/text_size_normal"
					android:textColor="@color/black"
					android:gravity="center"
					android:text="@string/delete"
					android:layout_centerInParent="true"
					android:textStyle="bold"
					android:background="@drawable/selector_list_dialog_item"
					/>
			</RelativeLayout>
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:background="@mipmap/btn_line"
				/>
			<RelativeLayout
				android:layout_width="1dp"
				android:layout_weight="1"
				android:layout_height="match_parent"
				>
				<TextView
					android:id="@+id/button2_text"
					android:text="@string/cancel"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:textSize="@dimen/text_size_normal"
					android:textColor="@color/black"
					android:gravity="center"
					android:textStyle="bold"
					android:layout_centerInParent="true"
					android:background="@drawable/selector_list_dialog_item"
					/>
			</RelativeLayout>
		</LinearLayout>
	</RelativeLayout>
	




        

</LinearLayout>