<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dao_hang_lan">
    <RelativeLayout
        android:id="@+id/title_rala"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@mipmap/play_back_title"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/touxiang"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tv_sd_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:text="32552"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/title_rala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_left_right_margin"
        android:layout_marginRight="@dimen/item_left_right_margin"
        android:layout_marginTop="@dimen/item_group_margin_top"

        android:orientation="vertical" >
        <RelativeLayout
            android:id="@+id/sd_card_capacity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ctl_setting_bar_height"
            >
            <TextView
                android:id="@+id/tv_sd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_black"
                android:layout_marginLeft="@dimen/inner_margin_left"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/sd_capacity"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_sd_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_sd"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                />
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c3c3c3"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/sd_card_remainning_capacity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ctl_setting_bar_height"
            >
            <TextView
                android:id="@+id/tv_sd_remainning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_black"
                android:layout_marginLeft="@dimen/inner_margin_left"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/sd_remainning_capacity"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_sd_remainning_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_sd_remainning"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                />
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c3c3c3"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/sd_format"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ctl_setting_bar_height"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_black"
                android:layout_marginLeft="@dimen/inner_margin_left"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/sd_formatting"
                android:textStyle="bold"
                />
            <ImageView
                android:id="@+id/format_icon"
                android:contentDescription="@string/imagedes"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/inner_margin_right"
                android:layout_alignParentRight="true"
                android:background="@mipmap/to"
                android:visibility="gone"
                />
            <ProgressBar
                android:id="@+id/progress_format"
                android:layout_width="@dimen/inner_item_progress_width_height"
                android:layout_height="@dimen/inner_item_progress_width_height"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:indeterminateDrawable="@anim/progress_white"
                style="?android:attr/progressBarStyleSmall"
                android:layout_marginRight="@dimen/inner_margin_right"
                android:indeterminateDuration="560000"
                />
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#c3c3c3"
                />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>